<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Player</string>
    <string name="add_tracks">Add tracks</string>
    <string name="albums">Albums</string>
    <string name="appears_on">Appears On</string>
    <string name="artists">Artists</string>
    <string name="all_songs">All songs</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_from_beginning">Play from beginning</string>
    <string name="play_all_songs">Play all songs</string>

    <string name="stop_scanning">Stop scanning</string>
    <string name="previous">Previous</string>
    <!--    Cannot name "continue" as this is reserved by Kotlin-->
    <string name="continue_string">Continue</string>

    <string name="storage_permission_needed">Storage Permission Needed</string>
    <string name="grant_storage_permissions">In order to read your music library, please grant storage permission.</string>
    <string name="back">Back</string>
    <string name="sort_by">Sort by</string>
    <string name="track_name">Track name</string>
    <string name="custom">Custom</string>
    <string name="artist_name">Artist name</string>
    <string name="genre_name">Genre name</string>
    <string name="album_name">Album name</string>
    <string name="view_artists">View artists</string>
    <string name="view_album">View album</string>

    <string name="year">Year</string>
    <string name="more">More</string>
    <string name="view_artist">View artist</string>
    <string name="songs">Songs</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="down_arrow">Down arrow</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="ok">OK</string>
    <string name="track_added_to_playlist">\'%1$s\' added to playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_this_playlist">Delete playlist %1$s</string>
    <string name="sure_you_want_to_delete">"Are you sure you want to delete %1$s?</string>
    <string name="search_media">Search media</string>
    <string name="refresh_library">Refresh library</string>
    <string name="create_playlist">Create playlist</string>
    <string name="no_tracks_found">No tracks found. Try refreshing your library</string>
    <string name="no_genres_found">No genres found. Try refreshing your library</string>
    <string name="no_artists_found">No artists found. Try refreshing your library</string>
    <string name="no_albums_found">No albums found. Try refreshing your library</string>
    <string name="no_playlists_try_creating_one">No playlists. Try creating one!</string>
    <string name="hide_player">Hide player</string>
    <string name="loading">Loading</string>
    <string name="now_playing">Now playing</string>
    <string name="next_up">Next up</string>
    <string name="drag">Drag</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="dismiss">Dismiss</string>
    <string name="playlist_name">Playlist name</string>
    <string name="remove">Remove</string>
    <string name="create">Create</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_is_empty">Playlist is empty.</string>
    <string name="search_tracks">Search tracks</string>

</resources>